# ClipToken

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
benchmarks/: live_agent_loop.py  loss_over_time.py  plot_curve.py
contextos/: __init__.py  main.py  pipeline.py
contextos/learning/: __init__.py  detector.py  policy.py  store.py
contextos/modules/: __init__.py  adaptive.py  assembler.py  compressor.py  deduplicator.py  substitutor.py
contextos/schemas/: __init__.py  models.py  registry.py
eval/: conftest.py  test_pipeline.py  validate_live.py
eval/fixtures/: sample_conversation.json
results/: eval_results.txt  live_validation.txt  loss_curve.csv  summary.txt
tests/: test_substitutor.py
