[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contextos"
version = "0.1.0"
description = "Drop-in middleware that compresses, deduplicates, and restructures LLM agent context before each API call."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Rishabh Sabnavis", email = "rishabhsabnavis@gmail.com" }]
keywords = ["llm", "agents", "context", "compression", "anthropic", "fastapi"]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "tiktoken>=0.6",
    "anthropic>=0.25",
    "sentence-transformers>=2.7",
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "httpx>=0.27",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-requests",
]

[project.scripts]
contextos = "contextos.main:run"

[tool.setuptools.packages.find]
include = ["contextos*"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["contextos", "eval", "benchmarks", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "B"]
"eval/*" = ["ANN"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests", "eval"]
addopts = "-ra -q"
asyncio_mode = "auto"
markers = [
    "integration: tests that call a real LLM provider (require ANTHROPIC_API_KEY)",
    "eval: end-to-end compression quality evals",
]

[tool.coverage.run]
source = ["contextos"]
omit = ["contextos/main.py"]
